@@ -106,7 +106,7 @@ error.clob.searchnull=The search string must not be null.
 error.clob.strnull=The string value myst not be null.
 error.connection.badhost=Unknown server host name ''{0}''.
 error.connection.badprop=The {0} connection property is invalid.
-error.connection.badsavep=savepoint is not valid for this transaction.
+error.connection.badsavep=Savepoint is not valid for this transaction.
 error.connection.badxaop=Calls to the {0} method are not allowed in an XA transaction.
 error.connection.autocommit={0}() should not be called while in auto-commit mode.
 error.connection.dbmismatch=Client {0} / Server {1} old database mismatch.
@@ -118,7 +118,7 @@ error.connection.savenullname=Savepoint name cannot be null.
 error.connection.servertype=The value of the serverType property is invalid: {0}
 error.connection.sso=Single-Sign-On is only supported on Windows. Please specify a user name.
 error.connection.timeout=Login timed out.
-error.conproxy.noconn="Connection has been returned to pool and this reference is no longer valid.
+error.conproxy.noconn=Connection has been returned to pool and this reference is no longer valid.
 error.convert.numericoverflow=Numeric overflow in conversion of value {0} to {1}.
 error.convert.badnumber=Value {0} cannot be converted to {1}.
 error.convert.badtypeconst=Unable to convert value {0} to {1}.
@@ -163,6 +163,7 @@ error.parsesql.missing=Invalid SQL statement or JDBC escape, terminating ''{0}''
 error.parsesql.syntax=Invalid JDBC {0} escape at line position {1}.
 error.parsesql.toomanyparams=Prepared or callable statement has more than {0} parameter markers.
 error.parsesql.unexpectedparam=Unexpected parameter marker at position {0}.
+error.parsesql.noprocedurecall=The SQL statement has to contain a procedure call.
 error.prepare.nooutparam=Output parameter not allowed as argument list prevents use of RPC.
 error.prepare.nosql=The prepared statement parameter must contain a valid SQL statement.
 error.prepare.paramindex=Invalid parameter index {0}.
@@ -176,16 +177,16 @@ error.resultset.delete=Non-null row provided to delete operation.
 error.resultset.fwdonly=ResultSet may only be accessed in a forward direction.
 error.resultset.insert=Column {0} / {1} is read-only.
 error.resultset.insrow=The cursor is on the insert row.
-error.resultset.longblob=Blob lengths greater than 2,147,483,647 are not suported.
-error.resultset.longclob=Clob lengths greater than 2,147,483,647 are not suported.
+error.resultset.longblob=Blob lengths greater than 2,147,483,647 are not supported.
+error.resultset.longclob=Clob lengths greater than 2,147,483,647 are not supported.
 error.resultset.noposupdate=Positioned update not supported.
 error.resultset.norow=No current row in the ResultSet.
 error.resultset.notinsrow=The cursor is not on the insert row.
 error.resultset.openfail=Unable to open the specified type of cursor.
 error.resultset.readonly=ResultSet is read only.
-error.resultset.streamerror=setBinaryStream: IO-Exception occured reading Stream: {0}
-error.resultset.streamlen=SetBinaryStream parameterized Length: {0} got length: {1}.
-error.resultset.streamlen2=SetBinaryStream parameterized Length: {0} got more than that.
+error.resultset.streamerror=setBinaryStream: IO-Exception occurred reading Stream: {0}
+error.resultset.streamlen=setBinaryStream parameterized length: {0} got length: {1}.
+error.resultset.streamlen2=setBinaryStream parameterized length: {0} got more than that.
 error.resultset.update=Null row provided to insert/update operation.
 error.resultset.updatefail=Update row failed. unable to locate row to update in table.
 error.resultset.deletefail=Delete row failed. Unable to locate row to delete in table.
